Test/git-issues/git-issue-1700.dfy.expect
git-issue-1700.dfy(15,13): Error: incorrect argument type for datatype constructor parameter 'e' (expected B.E, found A.E)
1 resolution/type errors detected in git-issue-1700.dfy
